[gd_scene load_steps=13 format=2]

[ext_resource path="res://EndingIcon.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/MainMenu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://AmaticSC-Bold.ttf"

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://AmaticSC-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = SubResource( 2 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://AmaticSC-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 20
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Merriweather-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 12
font_data = SubResource( 9 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = -25.0
margin_top = -21.0
margin_right = 1054.0
margin_bottom = 624.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Panel"]
margin_left = 114.0
margin_top = 91.0
margin_right = 492.0
margin_bottom = 195.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Fickle frontiers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="CanvasLayer/Panel"]
margin_left = 174.273
margin_top = 214.571
margin_right = 413.273
margin_bottom = 284.571
custom_fonts/font = SubResource( 5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="CanvasLayer/Panel"]
margin_left = 174.273
margin_top = 300.571
margin_right = 413.273
margin_bottom = 370.571
custom_fonts/font = SubResource( 5 )
text = "reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="CanvasLayer/Panel"]
margin_left = 174.273
margin_top = 386.571
margin_right = 413.273
margin_bottom = 456.571
custom_fonts/font = SubResource( 5 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndingsLabel" type="RichTextLabel" parent="CanvasLayer/Panel"]
margin_left = 685.0
margin_top = 433.0
margin_right = 902.0
margin_bottom = 535.0
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "ENDINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalTime" type="Label" parent="CanvasLayer/Panel"]
margin_left = 654.0
margin_top = 520.0
margin_right = 884.0
margin_bottom = 546.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total time: 1 day and 5 hours"
align = 1
valign = 1

[node name="Endings" type="Node" parent="CanvasLayer/Panel"]

[node name="Ending1" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 615, 167 )

[node name="Ending2" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 745, 167 )

[node name="Ending3" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 875, 167 )

[node name="Ending4" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 615, 267 )

[node name="Ending5" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 745, 267 )

[node name="Ending6" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 875, 267 )

[node name="Ending7" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 615, 367 )

[node name="Ending8" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 745, 367 )

[node name="Ending9" parent="CanvasLayer/Panel/Endings" instance=ExtResource( 1 )]
position = Vector2( 875, 367 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Panel"]
margin_left = 159.0
margin_top = 477.0
margin_right = 425.0
margin_bottom = 582.0
custom_fonts/normal_font = SubResource( 10 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Game made in 72 hours
for Ludum Dare 49,
by Jort van Driel, 
Jelte Schuurmans, 
Kari Meesters 
and Maiko Cheng[/center]"
text = "Game made in 72 hours
for Ludum Dare 49,
by Jort van Driel, 
Jelte Schuurmans, 
Kari Meesters 
and Maiko Cheng"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/Panel/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/Exit" to="." method="_on_Exit_pressed"]
